[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ioc-hostchecker"
version = "0.1.0"
description = "Query IPs, domains, URLs and file hashes against multiple threat intel sources in one shot."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "host-checker contributors" }]
keywords = ["threat-intel", "osint", "ioc", "security", "pentest", "soc", "dfir"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Information Technology",
    "Topic :: Security",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "typer>=0.12",
    "rich>=13.7",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "python-dotenv>=1.0",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-httpx>=0.30",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.scripts]
hostchecker = "hostchecker.cli.main:app"

[project.urls]
Repository = "https://github.com/kukitzz/host-checker"
Issues = "https://github.com/kukitzz/host-checker/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/hostchecker"]
artifacts = ["src/hostchecker/api/templates/*.html"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "PL"]
ignore = [
    "PLR0913",  # too-many-arguments is fine for provider configs
    "PLR0911",  # too-many-return-statements — common in HTTP status dispatch
    "PLR2004",  # magic values — HTTP status codes and similar are clearer inline
    "PLC0415",  # local imports keep CLI startup fast
    "UP042",    # we want str+Enum mixin for JSON serialisation
    "B008",     # FastAPI uses Form/Depends/Query as defaults by design
]

[tool.ruff.lint.per-file-ignores]
"src/hostchecker/providers/__init__.py" = ["F401"]  # re-exports for registration

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
